[package]
name = "nexus-sdk"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
ark-ff.workspace = true
ark-crypto-primitives.workspace = true
ark-std.workspace = true
ark-relations.workspace = true
ark-serialize.workspace = true
ark-r1cs-std.workspace = true
ark-bn254.workspace = true
serde.workspace = true

tracing = { version = "0.1", default-features = false, features = ["std"] }
nexus-api = { path = "../api", features = ["verbose"] }
postcard = { version = "1.0.8", features = ["alloc"] }
